<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一职有你</string>
    <string name="menu_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_schedule_fragment">ScheduleFragment</string>
    <string name="action_settings">设置</string>
    <string name="tutorial_thanks_intro">感谢你下载并使用一职有你!\n\n如果你喜欢它，别忘记告诉你的小伙伴哦！
    </string>

    <string name="tutorial_thanks_feedback">\n你可以收听官方新浪微薄
    </string>
    <string name="tutorial_thanks_feedback_end">期待你的回馈信息
    </string>
    <!-- title  -->
    <string name="title_activity">一职有你</string>
    <string name="title_activity_welcome">一职有你，欢迎你</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_register">注册</string>
    <string name="title_province">工作地点</string>
    <string name="title_company_property">公司性质</string>
    <string name="title_company_industry">公司行业</string>
    <string name="title_data_source">数据来源</string>
    <string name="title_school">您的学校</string>
    <string name="title_major">您的专业</string>
    <string name="title_alarm_time">宣讲会提醒时间</string>
    
    <string name="action_next">Next</string>
    <string name="action_previous">Prev</string>
    <string-array name="tutorial_titles">
        <item>欢迎来到一职有你</item>
        <item>丰富的信息筛选</item>
        <item>管理你的日程</item>
        <item>收藏您的信息</item>
        <item>一起参与讨论</item>
        <item>谢谢使用</item>
    </string-array>
    
     <string-array name="main_titles">
        <item>校园招聘</item>
        <item>宣讲会</item>
        <item>讨论组</item>
    </string-array>
    
    
    <string name="login_user_text">用户名</string>
    <string name="login_user_email">邮 箱</string>
    <string name="login_user">用户名可以是中文</string>
    <string name="login_passwd">密码</string>
    <string name="login_btn">登 陆</string>
    <string name="register_username">用户名</string>
    <string name="register_email">Email</string>
    <string name="register_email_hint">"@"</string>
    <string name="register_passwd">密码</string>
    <string name="register_passwd_hint">至少6位字符</string>
    <string name="register_btn">注 册</string>
    <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_software">开源软件</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_exit">退出程序</string>
    <string name="frame_title_news_lastest">最新资讯</string>
    <string name="frame_title_news_blog">最新博客</string>
    <string name="frame_title_news_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">职业</string>
    <string name="frame_title_question_site">站务</string>
    <string name="frame_title_tweet_lastest">最新动弹</string>
    <string name="frame_title_tweet_hot">热门动弹</string>
    <string name="frame_title_tweet_my">我的动弹</string>
    <string name="frame_title_tweet_send">动弹一下</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>
    <string name="login_dialog_logo">开源中国</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">拉取数据中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="recruit_detail_head_title">校园招聘信息</string>
    <string name="career_detail_head_title">宣讲会信息</string>
    <string name="recruit_detail_lable_pub">发布于</string>
    <string name="question_detail_head_title">帖子正文</string>
    <string name="question_pub_head_title">我要发帖</string>
    <string name="blog_detail_head_title">博客正文</string>
    <string name="software_detail_head_title">软件详情</string>
    <string name="tweet_detail_head_title">动弹详情</string>
    <string name="tweet_pub_head_title">动弹一下</string>
    <string name="message_detail_head_title">我和%s的对话</string>
    <string name="user_center_head_title">用户空间</string>
    <string name="user_friend_head_title">我的好友</string>
    <string name="user_friend_follower">关注(%d)</string>
    <string name="user_friend_fans">粉丝(%d)</string>
    <string name="topic_pub_head_title">新建主题</string>
    <string name="topic_pub_title_hint">输入主题</string>
    <string name="topic_pub_content_hint">输入内容</string>
    <string name="comment_list_head_title">网友评论</string>
    <string name="comment_listitem_type">发布于</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
    <string name="setting_head_title">系统设置</string>
    <string name="title_activity_job_detail">JobDetail</string>
    <string name="title_activity_tweet">Tweet</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_sort">Sort</string>
    <string name="sort_by_insert_time">按更新时间排序</string>
    <string name="sort_by_join">按收藏数排序</string>
    <string name="sort_by_reply">按回帖数排序</string>
    <string name="sort_by_click">按点击数排序</string>
    <string name="action_bbs_add">Add</string>
    <string name="empty_field">还没有填写</string>
    <string name="default_menu_user_name">登录/注册你的账号</string>
    <string name="menu_user_name">%s，欢迎回来</string>
    <string name="bbs_show">bbs_show</string>
    <string name="bbs_show_all">显示全部</string>
    <string name="bbs_show_collection">显示收藏</string>
    <string name="userinfo_edit">edit</string>
    <string name="userinfo_save">save</string>
    <string name="bbs_show_famous">名企</string>
    <string name="sort_by_career_time">按宣讲时间排序</string>
    <string name="sort_by_time">按时间排序</string>

</resources>