<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_user_text"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/login_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_user"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_passwd"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/login_user_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="6位以上密码"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:layout_margin="5dp"
        android:text="@string/login_btn"
        />

    <!--
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:background="#EBEBEB">
    </LinearLayout>
    -->

</LinearLayout>