<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logindialog_space"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="14.0dip"
        android:paddingRight="14.0dip"
        android:paddingTop="14.0dip"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg"
            android:paddingBottom="20.0dip"
            android:paddingTop="20.0dip" >

            <TableLayout
                android:id="@+id/login_user_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/login_user_table_bg"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/login_uly"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8.0dip"
                        android:layout_marginTop="10.0dip"
                        android:text="@string/login_dialog_account"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <AutoCompleteTextView
                        android:id="@+id/login_account"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8.0dip"
                        android:layout_marginRight="8.0dip"
                        android:layout_marginTop="10.0dip"
                        android:background="@null"
                        android:hint="@string/login_dialog_account_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2.0dip"
                    android:layout_marginRight="2.0dip"
                    android:layout_marginTop="5.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/login_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8.0dip"
                        android:text="@string/login_dialog_password"
                        android:textColor="#ff000000"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8.0dip"
                        android:layout_marginRight="8.0dip"
                        android:background="@null"
                        android:hint="@string/login_dialog_password_hint"
                        android:maxLines="1"
                        android:password="true"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_user_table"
                android:layout_alignRight="@+id/login_user_table"
                android:layout_below="@+id/login_user_table"
                android:orientation="vertical"
                android:stretchColumns="0,2" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip" >

                    <Button
                        android:id="@+id/login_btn_login"
                        android:layout_width="0dp"
                        android:layout_height="45dip"
                        android:layout_weight="1"
                        android:background="@drawable/login_btn_selector"
                        android:text="@string/login_dialog_login"
                        android:textSize="@dimen/text_size_20" />

                    <Button
                        android:id="@+id/login_register_btn"
                        android:layout_width="0dp"
                        android:layout_height="45dip"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/login_btn_selector"
                        android:text="@string/register_btn"
                        android:textSize="@dimen/text_size_20" />
                </LinearLayout>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/login_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_scrollview"
        android:layout_alignTop="@+id/login_scrollview"
        android:background="@drawable/login_close_button" />

</RelativeLayout>